--- a/packages/frontend-user/src/index.css
+++ b/packages/frontend-user/src/index.css
@@ -5,7 +5,7 @@
 }
 
 .App {
-  height: 100vh;
+  /*height: 100vh;*/
   background-color: var(--tg-theme-bg-color);
   color: var(--tg-theme-text-color);
 }
